tests/positive/ImportShadow/Nat.juvix
module Nat;

type Bool :=
  | true : Bool
  | false : Bool;

type Nat :=
  | zero : Nat
  | suc : Nat → Nat;

is-zero : Nat → Bool
  | n :=
    case n of
      | zero := true
      | suc _ := false;
