tests/negative/issue1337/DoubleBraces.juvix
module DoubleBraces;

type Nat :=
  | O : Nat
  | S : Nat -> Nat;

fun (n : Nat) : Nat :=
  case n
    | S {{y}} := O;
